[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/palladium/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://addons/palladium/ui/quit_dialog.gd" type="Script" id=2]







[node name="quit_dialog" type="WindowDialog" groups=[
"quit_dialog",
]]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
window_title = "DIALOG_QUIT_TITLE"
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_left = 833.0
margin_top = 480.0
margin_right = 1086.0
margin_bottom = 512.0
size_flags_horizontal = 4
text = "DIALOG_QUIT_LABEL"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 777.0
margin_top = 562.0
margin_right = 1143.0
margin_bottom = 600.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 30
alignment = 1

[node name="YesButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 173.0
margin_bottom = 38.0
focus_neighbour_left = NodePath("../NoButton")
focus_neighbour_top = NodePath("../NoButton")
focus_neighbour_right = NodePath("../NoButton")
focus_neighbour_bottom = NodePath("../NoButton")
focus_next = NodePath("../NoButton")
focus_previous = NodePath("../NoButton")
text = "BUTTON_YES"

[node name="NoButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 203.0
margin_right = 366.0
margin_bottom = 38.0
focus_neighbour_left = NodePath("../YesButton")
focus_neighbour_top = NodePath("../YesButton")
focus_neighbour_right = NodePath("../YesButton")
focus_neighbour_bottom = NodePath("../YesButton")
focus_next = NodePath("../YesButton")
focus_previous = NodePath("../YesButton")
text = "BUTTON_NO"
[connection signal="about_to_show" from="." to="." method="_on_quit_dialog_about_to_show"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NoButton" to="." method="_on_NoButton_pressed"]
